--- a/automations/005 kitchen/wallswitch_light_ceiling.yaml
+++ b/automations/005 kitchen/wallswitch_light_ceiling.yaml
@@ -9,4 +9,4 @@
   action:
     - service       : light.toggle
       target:
-        entity_id   : light.kitchen_ceiling_group
+        entity_id   : light.kitchen_ceiling
