--- a/automations/005 kitchen/wallswitch_light_counter.yaml
+++ b/automations/005 kitchen/wallswitch_light_counter.yaml
@@ -6,17 +6,17 @@
       entity_id     : binary_sensor.kitchen_wallswitch
   condition:
     - "{{ ((as_timestamp(now()) - as_timestamp(states('sensor.uptime'))) / 60) | int > 2 }}"
-    - "{{ states.light.kitchen_ceiling_group.state == states.light.kitchen_counter_light.state }}"
+    - "{{ states.light.kitchen_ceiling.state == states.light.kitchen_counter_light.state }}"
     # Only switch the kitchen counter light when it has the same state as the ceiling light.
   action:
     - delay              : 2   # delay to allow adaptive lightning to set the correct brightness
     - choose:
         - conditions:
             - condition  : state
-              entity_id  : light.kitchen_ceiling_group
+              entity_id  : light.kitchen_ceiling
               state      : "on"
             - condition  : numeric_state
-              entity_id  : light.kitchen_ceiling_group
+              entity_id  : light.kitchen_ceiling
               attribute  : brightness
               above      : 100  # about 40 % brightness
           sequence:
