--- a/automations/102 bedroom 1/auto_lights.yaml
+++ b/automations/102 bedroom 1/auto_lights.yaml
@@ -1,16 +1,16 @@
-- alias         : bedroom_1_auto_lights
-  id            : 93435ceb-71ac-4dbd-aa15-78b5dca0da70
+- alias: bedroom_1_auto_lights
+  id: 93435ceb-71ac-4dbd-aa15-78b5dca0da70
   trigger:
     - platform: sun
-      event: sunrise
+      event: sunset
       offset: "-00:15:00"
   condition:
-    - condition : state
-      entity_id : 'binary_sensor.anybody_home'
-      state     : 'off'
+    - condition: state
+      entity_id: "binary_sensor.anybody_home"
+      state: "off"
   action:
-    - service   : light.turn_on
-      entity_id : light.bedroom_1_ceiling
-    - delay     : "00:15:00"
-    - service   : light.turn_off
-      entity_id : light.bedroom_1_ceiling
+    - service: light.turn_on
+      entity_id: light.bedroom_1_ceiling
+    - delay: "00:15:00"
+    - service: light.turn_off
+      entity_id: light.bedroom_1_ceiling
