update device class

--- a/esphome/common/sensors/pulse_meter_water.yaml
+++ b/esphome/common/sensors/pulse_meter_water.yaml
@@ -21,6 +21,7 @@ total:
   name: "${name} Total Consumption"
   icon: "mdi:cube-outline"
   unit_of_measurement: "m³"
+  device_class: water
   state_class: total_increasing
   accuracy_decimals: 3
   filters:
